--- a/tags.html
+++ b/tags.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
@@ -23,34 +22,24 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
+    <div class="container">
+        <h3>Tabs</h3>
+        <ul class="nav nav-tabs">
+            <li class="active"><a href="#django" data-toggle="tab">Django</a></li>
+            <li><a href="#bootstrap" data-toggle="tab">Bootstrap</a></li>
+            <li><a href="#python" data-toggle="tab">Python</a></li>
+            <li><a href="#rwd" data-toggle="tab">RWD</a></li>
+            <li><a href="#nodejs" data-toggle="tab">NodeJs</a></li>
+        </ul>
+    </div>
 
-
-<nav class="navbar navbar-default" role="navigation">
-  <!-- El logotipo y el icono que despliega el menú se agrupan
-       para mostrarlos mejor en los dispositivos móviles -->
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse"
-            data-target=".navbar-ex1-collapse">
-      <span class="sr-only">Desplegar navegación</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <a class="navbar-brand" href="#">Logotipo</a>
-  </div>
- 
-  <!-- Agrupar los enlaces de navegación, los formularios y cualquier
-       otro elemento que se pueda ocultar al minimizar la barra -->
-  <div class="collapse navbar-collapse navbar-ex1-collapse">
-    <ul class="nav navbar-nav navbar-right">
-      <li class="active"><a href="#">Inicio</a></li>
-      <li><a href="#">Preguntas</a></li>
-     
-
-      </li>
-    </ul>
-  </div>
-</nav>
+    <div class="tab-content">
+        <div class="tab-pane active" id="django"><img src="img/django.jpg" alt="" class="img-responsive"></div>
+        <div class="tab-pane" id="bootstrap"><img src="img/bootstrap.jpg" alt="" class="img-responsive"></div>
+        <div class="tab-pane" id="python"><img src="img/python.jpg" alt="" class="img-responsive"></div>
+        <div class="tab-pane" id="rwd"><img src="img/rwd.jpg" alt="" class="img-responsive"></div>
+        <div class="tab-pane" id="nodejs"><img src="img/nodejs.jpg" alt="" class="img-responsive"></div>
+    </div>
 
 
 
